cmake_minimum_required(VERSION 2.8)
project(UBEV)
project(MBIE_EB)
project(UBEV_EB)
project(MBIE_EB_INFINITE)
project(UBEV_EB_INFINITE)

set(CMAKE_CXX_STANDARD 11)

set(UBEV_FILES chain_mdp.h ubev/ubev.h env.h ubev/ubev.cpp)
set(MBIE_EB_FILES chain_mdp.h env.h mbie_eb/mbie_eb.h mbie_eb/mbie_eb.cpp)
set(UBEV_EB_FILES chain_mdp.h env.h ubev_eb/ubev_eb.h ubev_eb/ubev_eb.cpp)
set(MBIE_EB_INFINITE_FILES chain_mdp.h env.h mbie_eb_infinite/mbie_eb_infinite.h mbie_eb_infinite/mbie_eb_infinite.cpp)
set(UBEV_EB_INFINITE_FILES chain_mdp.h env.h ubev_eb_infinite/ubev_eb_infinite.h ubev_eb_infinite/ubev_eb_infinite.cpp)
add_executable(UBEV ${UBEV_FILES})
add_executable(MBIE_EB ${MBIE_EB_FILES})
add_executable(UBEV_EB ${UBEV_EB_FILES})
add_executable(MBIE_EB_INFINITE ${MBIE_EB_INFINITE_FILES})
add_executable(UBEV_EB_INFINITE ${UBEV_EB_INFINITE_FILES})
